# AdventOfCode_legacy

./: .gitignore  AdventOfCode.pro  CMakeLists.txt  common.cpp  common.h  jsonhelper.h  leaderboard.cpp  leaderboard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qchar_hash.hpp  resources.qrc  solvers.cpp  solvers.h
cpp_solvers/: CMakeLists.txt
cpp_solvers/include/: aoc.hpp  converters.hpp  parsers.hpp  result.hpp  solvers.hpp  utils.hpp
cpp_solvers/src/: aoc.cpp  converters.cpp  parsers.cpp  utils.cpp
gui/: CMakeLists.txt  jsonhelper.h  leaderboard.cpp  leaderboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
gui/display/: display.cpp  display.h  display.ui  view.cpp  view.h
python/bindings/: CMakeLists.txt  aoc_bindings.cpp
solvers/: CMakeLists.txt  common.cpp  common.h  qpoint_hash.hpp  solvers.cpp  solvers.h
solvers/2015/: event_2015.h  puzzle_2015_01.cpp  puzzle_2015_01.h  puzzle_2015_02.cpp  puzzle_2015_02.h  puzzle_2015_03.cpp  puzzle_2015_03.h  puzzle_2015_04.cpp  puzzle_2015_04.h  puzzle_2015_05.cpp  puzzle_2015_05.h  puzzle_2015_06.cpp  puzzle_2015_06.h  puzzle_2015_07.cpp  puzzle_2015_07.h  puzzle_2015_08.cpp  puzzle_2015_08.h  puzzle_2015_09.cpp  puzzle_2015_09.h
solvers/2016/: event_2016.h  puzzle_2016_01.cpp  puzzle_2016_01.h  puzzle_2016_02.cpp  puzzle_2016_02.h  puzzle_2016_03.cpp  puzzle_2016_03.h  puzzle_2016_04.cpp  puzzle_2016_04.h  puzzle_2016_05.cpp  puzzle_2016_05.h  puzzle_2016_06.cpp  puzzle_2016_06.h  puzzle_2016_07.cpp  puzzle_2016_07.h  puzzle_2016_08.cpp  puzzle_2016_08.h  puzzle_2016_09.cpp  puzzle_2016_09.h
solvers/2017/: event_2017.h  puzzle_2017_01.cpp  puzzle_2017_01.h  puzzle_2017_02.cpp  puzzle_2017_02.h  puzzle_2017_03.cpp  puzzle_2017_03.h  puzzle_2017_04.cpp  puzzle_2017_04.h  puzzle_2017_05.cpp  puzzle_2017_05.h  puzzle_2017_06.cpp  puzzle_2017_06.h  puzzle_2017_07.cpp  puzzle_2017_07.h  puzzle_2017_08.cpp  puzzle_2017_08.h  puzzle_2017_09.cpp  puzzle_2017_09.h
solvers/2018/: event_2018.h  puzzle_2018_01.cpp  puzzle_2018_01.h  puzzle_2018_02.cpp  puzzle_2018_02.h  puzzle_2018_03.cpp  puzzle_2018_03.h  puzzle_2018_04.cpp  puzzle_2018_04.h  puzzle_2018_05.cpp  puzzle_2018_05.h  puzzle_2018_06.cpp  puzzle_2018_06.h  puzzle_2018_07.cpp  puzzle_2018_07.h  puzzle_2018_08.cpp  puzzle_2018_08.h  puzzle_2018_09.cpp  puzzle_2018_09.h
solvers/2019/: event_2019.h  intcodecomputer.cpp  intcodecomputer.h  puzzle_2019_01.cpp  puzzle_2019_01.h  puzzle_2019_02.cpp  puzzle_2019_02.h  puzzle_2019_03.cpp  puzzle_2019_03.h  puzzle_2019_04.cpp  puzzle_2019_04.h  puzzle_2019_05.cpp  puzzle_2019_05.h  puzzle_2019_06.cpp  puzzle_2019_06.h  puzzle_2019_07.cpp  puzzle_2019_07.h  puzzle_2019_08.cpp  puzzle_2019_08.h  puzzle_2019_09.cpp  puzzle_2019_09.h
solvers/2020/: event_2020.h  puzzle_2020_01.cpp  puzzle_2020_01.h  puzzle_2020_02.cpp  puzzle_2020_02.h  puzzle_2020_03.cpp  puzzle_2020_03.h  puzzle_2020_04.cpp  puzzle_2020_04.h  puzzle_2020_05.cpp  puzzle_2020_05.h  puzzle_2020_06.cpp  puzzle_2020_06.h  puzzle_2020_07.cpp  puzzle_2020_07.h  puzzle_2020_08.cpp  puzzle_2020_08.h  puzzle_2020_09.cpp  puzzle_2020_09.h  puzzle_2020_10.cpp  puzzle_2020_10.h  puzzle_2020_11.cpp  puzzle_2020_11.h  puzzle_2020_12.cpp  puzzle_2020_12.h  puzzle_2020_13.cpp  puzzle_2020_13.h  puzzle_2020_14.cpp  puzzle_2020_14.h  puzzle_2020_15.cpp  puzzle_2020_15.h  puzzle_2020_16.cpp  puzzle_2020_16.h  puzzle_2020_17.cpp  puzzle_2020_17.h  puzzle_2020_18.cpp  puzzle_2020_18.h  puzzle_2020_19.cpp  puzzle_2020_19.h  puzzle_2020_20.cpp  (+11 more)
solvers/2021/: event_2021.h  puzzle_2021_01.cpp  puzzle_2021_01.h  puzzle_2021_02.cpp  puzzle_2021_02.h  puzzle_2021_03.cpp  puzzle_2021_03.h  puzzle_2021_04.cpp  puzzle_2021_04.h  puzzle_2021_05.cpp  puzzle_2021_05.h  puzzle_2021_06.cpp  puzzle_2021_06.h  puzzle_2021_07.cpp  puzzle_2021_07.h  puzzle_2021_08.cpp  puzzle_2021_08.h  puzzle_2021_09.cpp  puzzle_2021_09.h  puzzle_2021_10.cpp  puzzle_2021_10.h  puzzle_2021_11.cpp  puzzle_2021_11.h  puzzle_2021_12.cpp  puzzle_2021_12.h  puzzle_2021_13.cpp  puzzle_2021_13.h  puzzle_2021_14.cpp  puzzle_2021_14.h  puzzle_2021_15.cpp  puzzle_2021_15.h  puzzle_2021_16.cpp  puzzle_2021_16.h  puzzle_2021_17.cpp  puzzle_2021_17.h  puzzle_2021_18.cpp  puzzle_2021_18.h  puzzle_2021_19.cpp  puzzle_2021_19.h  puzzle_2021_20.cpp  (+7 more)
solvers/2022/: event_2022.h  puzzle_2022_01.cpp  puzzle_2022_01.h  puzzle_2022_02.cpp  puzzle_2022_02.h  puzzle_2022_03.cpp  puzzle_2022_03.h  puzzle_2022_04.cpp  puzzle_2022_04.h  puzzle_2022_05.cpp  puzzle_2022_05.h  puzzle_2022_06.cpp  puzzle_2022_06.h  puzzle_2022_07.cpp  puzzle_2022_07.h  puzzle_2022_08.cpp  puzzle_2022_08.h  puzzle_2022_09.cpp  puzzle_2022_09.h  puzzle_2022_10.cpp  puzzle_2022_10.h  puzzle_2022_11.cpp  puzzle_2022_11.h  puzzle_2022_12.cpp  puzzle_2022_12.h  puzzle_2022_13.cpp  puzzle_2022_13.h  puzzle_2022_14.cpp  puzzle_2022_14.h  puzzle_2022_15.cpp  puzzle_2022_15.h  puzzle_2022_16.cpp  puzzle_2022_16.h
solvers/2023/: event_2023.h  puzzle_2023_01.cpp  puzzle_2023_01.h  puzzle_2023_02.cpp  puzzle_2023_02.h  puzzle_2023_03.cpp  puzzle_2023_03.h  puzzle_2023_04.cpp  puzzle_2023_04.h  puzzle_2023_05.cpp  puzzle_2023_05.h  puzzle_2023_06.cpp  puzzle_2023_06.h  puzzle_2023_07.cpp  puzzle_2023_07.h  puzzle_2023_08.cpp  puzzle_2023_08.h  puzzle_2023_09.cpp  puzzle_2023_09.h  puzzle_2023_10.cpp  puzzle_2023_10.h  puzzle_2023_11.cpp  puzzle_2023_11.h  puzzle_2023_12.cpp  puzzle_2023_12.h  puzzle_2023_13.cpp  puzzle_2023_13.h  puzzle_2023_14.cpp  puzzle_2023_14.h  puzzle_2023_15.cpp  puzzle_2023_15.h  puzzle_2023_16.cpp  puzzle_2023_16.h  puzzle_2023_17.cpp  puzzle_2023_17.h  puzzle_2023_18.cpp  puzzle_2023_18.h  puzzle_2023_19.cpp  puzzle_2023_19.h  puzzle_2023_20.cpp  (+11 more)
solvers/2024/: event_2024.h  puzzle_2024_01.cpp  puzzle_2024_01.h  puzzle_2024_02.cpp  puzzle_2024_02.h  puzzle_2024_03.cpp  puzzle_2024_03.h  puzzle_2024_04.cpp  puzzle_2024_04.h  puzzle_2024_05.cpp  puzzle_2024_05.h  puzzle_2024_06.cpp  puzzle_2024_06.h  puzzle_2024_07.cpp  puzzle_2024_07.h  puzzle_2024_08.cpp  puzzle_2024_08.h  puzzle_2024_09.cpp  puzzle_2024_09.h  (+32 more)
(+447 files in other folders)
