add_library(aoc_solvers
  STATIC
    2015/puzzle_2015_01.cpp
    2015/puzzle_2015_02.cpp
    2015/puzzle_2015_03.cpp
    2015/puzzle_2015_04.cpp
    2015/puzzle_2015_05.cpp
    2015/puzzle_2015_06.cpp
    2015/puzzle_2015_07.cpp
    2015/puzzle_2015_08.cpp
    2015/puzzle_2015_09.cpp
    2016/puzzle_2016_01.cpp
    2016/puzzle_2016_02.cpp
    2016/puzzle_2016_03.cpp
    2016/puzzle_2016_04.cpp
    2016/puzzle_2016_05.cpp
    2016/puzzle_2016_06.cpp
    2016/puzzle_2016_07.cpp
    2016/puzzle_2016_08.cpp
    2016/puzzle_2016_09.cpp
    2017/puzzle_2017_01.cpp
    2017/puzzle_2017_02.cpp
    2017/puzzle_2017_03.cpp
    2017/puzzle_2017_04.cpp
    2017/puzzle_2017_05.cpp
    2017/puzzle_2017_06.cpp
    2017/puzzle_2017_07.cpp
    2017/puzzle_2017_08.cpp
    2017/puzzle_2017_09.cpp
    2018/puzzle_2018_01.cpp
    2018/puzzle_2018_02.cpp
    2018/puzzle_2018_03.cpp
    2018/puzzle_2018_04.cpp
    2018/puzzle_2018_05.cpp
    2018/puzzle_2018_06.cpp
    2018/puzzle_2018_07.cpp
    2018/puzzle_2018_08.cpp
    2018/puzzle_2018_09.cpp
    2019/intcodecomputer.cpp
    2019/puzzle_2019_01.cpp
    2019/puzzle_2019_02.cpp
    2019/puzzle_2019_03.cpp
    2019/puzzle_2019_04.cpp
    2019/puzzle_2019_05.cpp
    2019/puzzle_2019_06.cpp
    2019/puzzle_2019_07.cpp
    2019/puzzle_2019_08.cpp
    2019/puzzle_2019_09.cpp
    2020/display/puzzle_2020_24/puzzle_2020_24_display.cpp
    2020/display/puzzle_2020_24/puzzle_2020_24_view.cpp
    2020/puzzle_2020_01.cpp
    2020/puzzle_2020_02.cpp
    2020/puzzle_2020_03.cpp
    2020/puzzle_2020_04.cpp
    2020/puzzle_2020_05.cpp
    2020/puzzle_2020_06.cpp
    2020/puzzle_2020_07.cpp
    2020/puzzle_2020_08.cpp
    2020/puzzle_2020_09.cpp
    2020/puzzle_2020_10.cpp
    2020/puzzle_2020_11.cpp
    2020/puzzle_2020_12.cpp
    2020/puzzle_2020_13.cpp
    2020/puzzle_2020_14.cpp
    2020/puzzle_2020_15.cpp
    2020/puzzle_2020_16.cpp
    2020/puzzle_2020_17.cpp
    2020/puzzle_2020_18.cpp
    2020/puzzle_2020_19.cpp
    2020/puzzle_2020_20.cpp
    2020/puzzle_2020_21.cpp
    2020/puzzle_2020_22.cpp
    2020/puzzle_2020_23.cpp
    2020/puzzle_2020_24.cpp
    2020/puzzle_2020_25.cpp
    2021/puzzle_2021_01.cpp
    2021/puzzle_2021_02.cpp
    2021/puzzle_2021_03.cpp
    2021/puzzle_2021_04.cpp
    2021/puzzle_2021_05.cpp
    2021/puzzle_2021_06.cpp
    2021/puzzle_2021_07.cpp
    2021/puzzle_2021_08.cpp
    2021/puzzle_2021_09.cpp
    2021/puzzle_2021_10.cpp
    2021/puzzle_2021_11.cpp
    2021/puzzle_2021_12.cpp
    2021/puzzle_2021_13.cpp
    2021/puzzle_2021_14.cpp
    2021/puzzle_2021_15.cpp
    2021/puzzle_2021_16.cpp
    2021/puzzle_2021_17.cpp
    2021/puzzle_2021_18.cpp
    2021/puzzle_2021_19.cpp
    2021/puzzle_2021_20.cpp
    2021/puzzle_2021_21.cpp
    2021/puzzle_2021_22.cpp
    2021/puzzle_2021_23.cpp
    2022/puzzle_2022_01.cpp
    2022/puzzle_2022_02.cpp
    2022/puzzle_2022_03.cpp
    2022/puzzle_2022_04.cpp
    2022/puzzle_2022_05.cpp
    2022/puzzle_2022_06.cpp
    2022/puzzle_2022_07.cpp
    2022/puzzle_2022_08.cpp
    2022/puzzle_2022_09.cpp
    2022/puzzle_2022_10.cpp
    2022/puzzle_2022_11.cpp
    2022/puzzle_2022_12.cpp
    2022/puzzle_2022_13.cpp
    2022/puzzle_2022_14.cpp
    2022/puzzle_2022_15.cpp
    2022/puzzle_2022_16.cpp
    2023/puzzle_2023_01.cpp
    2023/puzzle_2023_02.cpp
    2023/puzzle_2023_03.cpp
    2023/puzzle_2023_04.cpp
    2023/puzzle_2023_05.cpp
    2023/puzzle_2023_06.cpp
    2023/puzzle_2023_07.cpp
    2023/puzzle_2023_08.cpp
    2023/puzzle_2023_09.cpp
    2023/puzzle_2023_10.cpp
    2023/puzzle_2023_11.cpp
    2023/puzzle_2023_12.cpp
    2023/puzzle_2023_13.cpp
    2023/puzzle_2023_14.cpp
    2023/puzzle_2023_15.cpp
    2023/puzzle_2023_16.cpp
    2023/puzzle_2023_17.cpp
    2023/puzzle_2023_18.cpp
    2023/puzzle_2023_19.cpp
    2023/puzzle_2023_20.cpp
    2023/puzzle_2023_21.cpp
    2023/puzzle_2023_22.cpp
    2023/puzzle_2023_23.cpp
    2023/puzzle_2023_24.cpp
    2023/puzzle_2023_25.cpp
    2024/puzzle_2024_01.cpp
    2024/puzzle_2024_02.cpp
    2024/puzzle_2024_03.cpp
    2024/puzzle_2024_04.cpp
    2024/puzzle_2024_05.cpp
    2024/puzzle_2024_06.cpp
    2024/puzzle_2024_07.cpp
    2024/puzzle_2024_08.cpp
    2024/puzzle_2024_09.cpp
    2024/puzzle_2024_10.cpp
    2024/puzzle_2024_11.cpp
    2024/puzzle_2024_12.cpp
    2024/puzzle_2024_13.cpp
    2024/puzzle_2024_14.cpp
    2024/puzzle_2024_15.cpp
    2024/puzzle_2024_16.cpp
    2024/puzzle_2024_17.cpp
    2024/puzzle_2024_18.cpp
    2024/puzzle_2024_19.cpp
    2024/puzzle_2024_20.cpp
    2024/puzzle_2024_21.cpp
    2024/puzzle_2024_22.cpp
    2024/puzzle_2024_23.cpp
    2024/puzzle_2024_24.cpp
    2024/puzzle_2024_25.cpp
    2025/puzzle_2025_01.cpp
    2025/puzzle_2025_02.cpp
    2025/puzzle_2025_03.cpp
    2025/puzzle_2025_04.cpp
    2025/puzzle_2025_05.cpp
    2025/puzzle_2025_06.cpp
    2025/puzzle_2025_07.cpp
    common.cpp
    solvers.cpp
)

target_include_directories(aoc_solvers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(aoc_solvers Qt5::Core Qt5::Gui Qt5::Widgets)
set_target_properties(aoc_solvers PROPERTIES POSITION_INDEPENDENT_CODE ON)
